[tool.poetry]
name = "clearbox-ner"
version = "0.1.0"
description = ""
authors = ["Clearbox-AI"]
readme = "README.md"
packages = [{include = "clearbox_ner"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
presidio-analyzer = "^2.2.32"
transformers = "^4.26.1"
torch = "^1.13.1"
faker = "^17.3.0"
gender-guesser = "^0.4.0"
simple-colors = "^0.1.5"
spacy = "^3.5.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.1"
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
