[tool.poetry]
name = "nerpii"
version = "0.1.7"
description = "A python library to perform NER on structured data and generate PII with Faker"
authors = ["Clearbox AI <info@clearbox.ai>"]
license = "GPL"
readme = "README.md"
homepage = "https://github.com/Clearbox-AI/nerpii"
repository = "https://github.com/Clearbox-AI/nerpii"
packages = [{include = "nerpii"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
presidio-analyzer = "^2.2.32"
torch = {version = "^2.1.0+cpu", source = "pytorch"}
transformers = "^4.26.1"
faker = "^17.3.0"
gender-guesser = "^0.4.0"
simple-colors = "^0.1.5"
spacy = "^3.5.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.1"
pytest = "^7.2.1"
flake8 = "^6.0.0"
flake8-import-order = "^0.18.2"
flake8-black = "^0.3.6"
black = "^23.1.0"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

